--- a/.coveragerc
+++ b/.coveragerc
@@ -2,7 +2,7 @@
 include =
     restlib2/resources.py
     restlib2/http.py
-    restlib2/tests/cases.py
+    restlib2/utils.py
 
 source = restlib2
 
