--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,28 @@
 language: python
+
 python:
-    - "2.6"
-    - "2.7"
+    - 2.6
+    - 2.7
+    - 3.2
+    - 3.3
+
 env:
     - DJANGO=1.4.10
     - DJANGO=1.5.5
     - DJANGO=1.6.1
+
+matrix:
+    exclude:
+        - python: 3.2
+          env: DJANGO=1.4.10
+        - python: 3.3
+          env: DJANGO=1.4.10
+
 install:
     - pip install -q coveralls Django==$DJANGO --use-mirrors
+
 script:
     - coverage run test_suite.py
+
 after_success:
     - coveralls
