--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ matrix:
 
 install:
     - pip install -q coveralls Django==$DJANGO --use-mirrors
+    - pip install -r requirements.txt
 
 script:
     - coverage run test_suite.py
